sm_calc/sm_calc_y.output
Grammar

    0 $accept: calc_run $end

    1 calc_run: calc_res calc_run
    2         | calc_res

    3 calc_res: T_NEWLINE
    4         | ll_10_expr T_STOP
    5         | ld_expr T_STOP
    6         | sz_expr T_STOP
    7         | T_HELP T_STOP
    8         | T_QUIT T_STOP
    9         | T_EXIT T_STOP
   10         | ll_10_expr T_NEWLINE
   11         | ld_expr T_NEWLINE
   12         | sz_expr T_NEWLINE
   13         | T_HELP T_NEWLINE
   14         | T_QUIT T_NEWLINE
   15         | T_EXIT T_NEWLINE

   16 sz_expr: T_SZ
   17        | T_CONFIG
   18        | T_F_PRECISION
   19        | T_F_PRECISION T_ASSIGN T_EXP
   20        | T_A_UNIT
   21        | T_A_UNIT T_ASSIGN T_RAD
   22        | T_A_UNIT T_ASSIGN T_DEG
   23        | T_A_UNIT T_ASSIGN T_GRAD
   24        | T_RAD
   25        | T_DEG
   26        | T_GRAD
   27        | T_I_FORMAT
   28        | T_I_FORMAT T_ASSIGN T_DEC
   29        | T_I_FORMAT T_ASSIGN T_OCT
   30        | T_I_FORMAT T_ASSIGN T_HEX
   31        | T_I_FORMAT T_ASSIGN T_BIN
   32        | T_DEC
   33        | T_OCT
   34        | T_HEX
   35        | T_BIN
   36        | T_DEC_OCT T_L_BRACK ll_10_expr T_R_BRACK
   37        | T_DEC_HEX T_L_BRACK ll_10_expr T_R_BRACK
   38        | T_DEC_BIN T_L_BRACK ll_10_expr T_R_BRACK
   39        | T_OCT_DEC T_L_BRACK ll_8_expr T_R_BRACK
   40        | T_HEX_DEC T_L_BRACK ll_16_expr T_R_BRACK
   41        | T_BIN_DEC T_L_BRACK ll_2_expr T_R_BRACK
   42        | T_ECHO T_L_BRACK sz_expr T_R_BRACK

   43 ll_10_expr: T_LL_10
   44           | ll_8_expr
   45           | ll_16_expr
   46           | ll_2_expr
   47           | T_L_BRACK ll_10_expr T_R_BRACK
   48           | ll_10_expr T_ADD ll_10_expr
   49           | ll_10_expr T_SUB ll_10_expr
   50           | ll_10_expr T_MUL ll_10_expr
   51           | T_SUB ll_10_expr
   52           | T_F_PRECISION T_ASSIGN T_LL_10
   53           | ll_10_expr T_FACTORIAL
   54           | T_POWER_X_2 T_L_BRACK ll_10_expr T_R_BRACK
   55           | T_POWER_10_X T_L_BRACK ll_10_expr T_R_BRACK
   56           | T_POWER_2_X T_L_BRACK ll_10_expr T_R_BRACK
   57           | ll_10_expr T_L_ASHIFT ll_10_expr
   58           | ll_10_expr T_R_ASHIFT ll_10_expr
   59           | ll_10_expr T_L_LSHIFT ll_10_expr
   60           | ll_10_expr T_R_LSHIFT ll_10_expr
   61           | ll_10_expr T_L_CSHIFT ll_10_expr
   62           | ll_10_expr T_R_CSHIFT ll_10_expr
   63           | T_ABS T_L_BRACK ll_10_expr T_R_BRACK
   64           | T_MOD T_L_BRACK ll_10_expr T_COMMA ll_10_expr T_R_BRACK
   65           | T_MOD_2 T_L_BRACK ll_10_expr T_R_BRACK
   66           | T_AND T_L_BRACK ll_10_expr T_COMMA ll_10_expr T_R_BRACK
   67           | T_OR T_L_BRACK ll_10_expr T_COMMA ll_10_expr T_R_BRACK
   68           | T_NOT T_L_BRACK ll_10_expr T_R_BRACK
   69           | T_NAND T_L_BRACK ll_10_expr T_COMMA ll_10_expr T_R_BRACK
   70           | T_NOR T_L_BRACK ll_10_expr T_COMMA ll_10_expr T_R_BRACK
   71           | T_XOR T_L_BRACK ll_10_expr T_COMMA ll_10_expr T_R_BRACK

   72 ll_8_expr: T_LL_8

   73 ll_16_expr: T_LL_16

   74 ll_2_expr: T_LL_2

   75 ld_expr: T_LD_N
   76        | T_LD_E
   77        | T_L_BRACK ld_expr T_R_BRACK
   78        | T_PI
   79        | T_EXP
   80        | T_GAMMA
   81        | T_PHI
   82        | ld_expr T_ADD ll_10_expr
   83        | ld_expr T_SUB ll_10_expr
   84        | ld_expr T_MUL ll_10_expr
   85        | ll_10_expr T_ADD ld_expr
   86        | ll_10_expr T_SUB ld_expr
   87        | ll_10_expr T_MUL ld_expr
   88        | ld_expr T_ADD ld_expr
   89        | ld_expr T_SUB ld_expr
   90        | ld_expr T_MUL ld_expr
   91        | ll_10_expr T_DIV ll_10_expr
   92        | ld_expr T_DIV ll_10_expr
   93        | ll_10_expr T_DIV ld_expr
   94        | ld_expr T_DIV ld_expr
   95        | T_SUB ld_expr
   96        | T_SIN T_L_BRACK ll_10_expr T_R_BRACK
   97        | T_COS T_L_BRACK ll_10_expr T_R_BRACK
   98        | T_TAN T_L_BRACK ll_10_expr T_R_BRACK
   99        | T_ASIN T_L_BRACK ll_10_expr T_R_BRACK
  100        | T_ACOS T_L_BRACK ll_10_expr T_R_BRACK
  101        | T_ATAN T_L_BRACK ll_10_expr T_R_BRACK
  102        | T_SIN T_L_BRACK ld_expr T_R_BRACK
  103        | T_COS T_L_BRACK ld_expr T_R_BRACK
  104        | T_TAN T_L_BRACK ld_expr T_R_BRACK
  105        | T_ASIN T_L_BRACK ld_expr T_R_BRACK
  106        | T_ACOS T_L_BRACK ld_expr T_R_BRACK
  107        | T_ATAN T_L_BRACK ld_expr T_R_BRACK
  108        | T_GRAD_RAD T_L_BRACK ll_10_expr T_R_BRACK
  109        | T_RAD_GRAD T_L_BRACK ll_10_expr T_R_BRACK
  110        | T_RAD_DEG T_L_BRACK ll_10_expr T_R_BRACK
  111        | T_DEG_RAD T_L_BRACK ll_10_expr T_R_BRACK
  112        | T_GRAD_DEG T_L_BRACK ll_10_expr T_R_BRACK
  113        | T_DEG_GRAD T_L_BRACK ll_10_expr T_R_BRACK
  114        | T_GRAD_RAD T_L_BRACK ld_expr T_R_BRACK
  115        | T_RAD_GRAD T_L_BRACK ld_expr T_R_BRACK
  116        | T_RAD_DEG T_L_BRACK ld_expr T_R_BRACK
  117        | T_DEG_RAD T_L_BRACK ld_expr T_R_BRACK
  118        | T_GRAD_DEG T_L_BRACK ld_expr T_R_BRACK
  119        | T_DEG_GRAD T_L_BRACK ld_expr T_R_BRACK
  120        | T_POWER T_L_BRACK ld_expr T_COMMA ld_expr T_R_BRACK
  121        | T_POWER T_L_BRACK ll_10_expr T_COMMA ll_10_expr T_R_BRACK
  122        | T_POWER T_L_BRACK ld_expr T_COMMA ll_10_expr T_R_BRACK
  123        | T_POWER T_L_BRACK ll_10_expr T_COMMA ld_expr T_R_BRACK
  124        | T_POWER_X_2 T_L_BRACK ld_expr T_R_BRACK
  125        | T_POWER_EXP_X T_L_BRACK ld_expr T_R_BRACK
  126        | T_POWER_EXP_X T_L_BRACK ll_10_expr T_R_BRACK
  127        | T_POWER_10_X T_L_BRACK ld_expr T_R_BRACK
  128        | T_POWER_2_X T_L_BRACK ld_expr T_R_BRACK
  129        | T_SQRT T_L_BRACK ll_10_expr T_R_BRACK
  130        | T_SQRT T_L_BRACK ld_expr T_R_BRACK
  131        | T_LN T_L_BRACK ll_10_expr T_R_BRACK
  132        | T_LN T_L_BRACK ld_expr T_R_BRACK
  133        | T_LG T_L_BRACK ll_10_expr T_R_BRACK
  134        | T_LG T_L_BRACK ld_expr T_R_BRACK
  135        | T_LOG T_L_BRACK ll_10_expr T_COMMA ll_10_expr T_R_BRACK
  136        | T_LOG T_L_BRACK ld_expr T_COMMA ll_10_expr T_R_BRACK
  137        | T_LOG T_L_BRACK ll_10_expr T_COMMA ld_expr T_R_BRACK
  138        | T_LOG T_L_BRACK ld_expr T_COMMA ld_expr T_R_BRACK
  139        | T_RECIP T_L_BRACK ll_10_expr T_R_BRACK
  140        | T_RECIP T_L_BRACK ld_expr T_R_BRACK
  141        | T_ABS T_L_BRACK ld_expr T_R_BRACK
  142        | T_RAND


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_LL_10 <ll_val> (258) 43 52
    T_LL_8 <ll_val> (259) 72
    T_LL_16 <ll_val> (260) 73
    T_LL_2 <ll_val> (261) 74
    T_F_PRECISION <ll_val> (262) 18 19 52
    T_LD_N <ld_val> (263) 75
    T_LD_E <ld_val> (264) 76
    T_PI <ld_val> (265) 78
    T_EXP <ld_val> (266) 19 79
    T_GAMMA <ld_val> (267) 80
    T_PHI <ld_val> (268) 81
    T_SZ <sz_val> (269) 16
    T_NEWLINE (270) 3 10 11 12 13 14 15
    T_STOP (271) 4 5 6 7 8 9
    T_CONFIG (272) 17
    T_QUIT (273) 8 14
    T_EXIT (274) 9 15
    T_HELP (275) 7 13
    T_ECHO (276) 42
    T_A_UNIT (277) 20 21 22 23
    T_I_FORMAT (278) 27 28 29 30 31
    T_AND (279) 66
    T_OR (280) 67
    T_NOT (281) 68
    T_NAND (282) 69
    T_NOR (283) 70
    T_XOR (284) 71
    T_RAND (285) 142
    T_ABS (286) 63 141
    T_MOD (287) 64
    T_MOD_2 (288) 65
    T_SQRT (289) 129 130
    T_LN (290) 131 132
    T_LG (291) 133 134
    T_LOG (292) 135 136 137 138
    T_RECIP (293) 139 140
    T_POWER (294) 120 121 122 123
    T_POWER_X_2 (295) 54 124
    T_POWER_EXP_X (296) 125 126
    T_POWER_10_X (297) 55 127
    T_POWER_2_X (298) 56 128
    T_L_ASHIFT (299) 57
    T_R_ASHIFT (300) 58
    T_L_LSHIFT (301) 59
    T_R_LSHIFT (302) 60
    T_L_CSHIFT (303) 61
    T_R_CSHIFT (304) 62
    T_SIN (305) 96 102
    T_COS (306) 97 103
    T_TAN (307) 98 104
    T_ASIN (308) 99 105
    T_ACOS (309) 100 106
    T_ATAN (310) 101 107
    T_DEG (311) 22 25
    T_GRAD (312) 23 26
    T_RAD (313) 21 24
    T_GRAD_RAD (314) 108 114
    T_RAD_GRAD (315) 109 115
    T_RAD_DEG (316) 110 116
    T_DEG_RAD (317) 111 117
    T_GRAD_DEG (318) 112 118
    T_DEG_GRAD (319) 113 119
    T_DEC_OCT (320) 36
    T_DEC_HEX (321) 37
    T_DEC_BIN (322) 38
    T_OCT_DEC (323) 39
    T_HEX_DEC (324) 40
    T_BIN_DEC (325) 41
    T_DEC (326) 28 32
    T_OCT (327) 29 33
    T_HEX (328) 30 34
    T_BIN (329) 31 35
    T_COMMA (330) 64 66 67 69 70 71 120 121 122 123 135 136 137 138
    T_FACTORIAL (331) 53
    T_L_BRACK (332) 36 37 38 39 40 41 42 47 54 55 56 63 64 65 66 67 68 69 70 71 77 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141
    T_R_BRACK (333) 36 37 38 39 40 41 42 47 54 55 56 63 64 65 66 67 68 69 70 71 77 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141
    T_UMINUS (334)
    T_ADD (335) 48 82 85 88
    T_SUB (336) 49 51 83 86 89 95
    T_MUL (337) 50 84 87 90
    T_DIV (338) 91 92 93 94
    T_ASSIGN (339) 19 21 22 23 28 29 30 31 52


Nonterminals, with rules where they appear

    $accept (85)
        on left: 0
    calc_run (86)
        on left: 1 2
        on right: 0 1
    calc_res (87)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15
        on right: 1 2
    sz_expr <sz_val> (88)
        on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
        on right: 6 12 42
    ll_10_expr <ll_val> (89)
        on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
        on right: 4 10 36 37 38 47 48 49 50 51 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 82 83 84 85 86 87 91 92 93 96 97 98 99 100 101 108 109 110 111 112 113 121 122 123 126 129 131 133 135 136 137 139
    ll_8_expr <ll_val> (90)
        on left: 72
        on right: 39 44
    ll_16_expr <ll_val> (91)
        on left: 73
        on right: 40 45
    ll_2_expr <ll_val> (92)
        on left: 74
        on right: 41 46
    ld_expr <ld_val> (93)
        on left: 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142
        on right: 5 11 77 82 83 84 85 86 87 88 89 90 92 93 94 95 102 103 104 105 106 107 114 115 116 117 118 119 120 122 123 124 125 127 128 130 132 134 136 137 138 140 141


State 0

    0 $accept: . calc_run $end

    T_LL_10        shift, and go to state 1
    T_LL_8         shift, and go to state 2
    T_LL_16        shift, and go to state 3
    T_LL_2         shift, and go to state 4
    T_F_PRECISION  shift, and go to state 5
    T_LD_N         shift, and go to state 6
    T_LD_E         shift, and go to state 7
    T_PI           shift, and go to state 8
    T_EXP          shift, and go to state 9
    T_GAMMA        shift, and go to state 10
    T_PHI          shift, and go to state 11
    T_SZ           shift, and go to state 12
    T_NEWLINE      shift, and go to state 13
    T_CONFIG       shift, and go to state 14
    T_QUIT         shift, and go to state 15
    T_EXIT         shift, and go to state 16
    T_HELP         shift, and go to state 17
    T_ECHO         shift, and go to state 18
    T_A_UNIT       shift, and go to state 19
    T_I_FORMAT     shift, and go to state 20
    T_AND          shift, and go to state 21
    T_OR           shift, and go to state 22
    T_NOT          shift, and go to state 23
    T_NAND         shift, and go to state 24
    T_NOR          shift, and go to state 25
    T_XOR          shift, and go to state 26
    T_RAND         shift, and go to state 27
    T_ABS          shift, and go to state 28
    T_MOD          shift, and go to state 29
    T_MOD_2        shift, and go to state 30
    T_SQRT         shift, and go to state 31
    T_LN           shift, and go to state 32
    T_LG           shift, and go to state 33
    T_LOG          shift, and go to state 34
    T_RECIP        shift, and go to state 35
    T_POWER        shift, and go to state 36
    T_POWER_X_2    shift, and go to state 37
    T_POWER_EXP_X  shift, and go to state 38
    T_POWER_10_X   shift, and go to state 39
    T_POWER_2_X    shift, and go to state 40
    T_SIN          shift, and go to state 41
    T_COS          shift, and go to state 42
    T_TAN          shift, and go to state 43
    T_ASIN         shift, and go to state 44
    T_ACOS         shift, and go to state 45
    T_ATAN         shift, and go to state 46
    T_DEG          shift, and go to state 47
    T_GRAD         shift, and go to state 48
    T_RAD          shift, and go to state 49
    T_GRAD_RAD     shift, and go to state 50
    T_RAD_GRAD     shift, and go to state 51
    T_RAD_DEG      shift, and go to state 52
    T_DEG_RAD      shift, and go to state 53
    T_GRAD_DEG     shift, and go to state 54
    T_DEG_GRAD     shift, and go to state 55
    T_DEC_OCT      shift, and go to state 56
    T_DEC_HEX      shift, and go to state 57
    T_DEC_BIN      shift, and go to state 58
    T_OCT_DEC      shift, and go to state 59
    T_HEX_DEC      shift, and go to state 60
    T_BIN_DEC      shift, and go to state 61
    T_DEC          shift, and go to state 62
    T_OCT          shift, and go to state 63
    T_HEX          shift, and go to state 64
    T_BIN          shift, and go to state 65
    T_L_BRACK      shift, and go to state 66
    T_SUB          shift, and go to state 67

    calc_run    go to state 68
    calc_res    go to state 69
    sz_expr     go to state 70
    ll_10_expr  go to state 71
    ll_8_expr   go to state 72
    ll_16_expr  go to state 73
    ll_2_expr   go to state 74
    ld_expr     go to state 75


State 1

   43 ll_10_expr: T_LL_10 .

    $default  reduce using rule 43 (ll_10_expr)


State 2

   72 ll_8_expr: T_LL_8 .

    $default  reduce using rule 72 (ll_8_expr)


State 3

   73 ll_16_expr: T_LL_16 .

    $default  reduce using rule 73 (ll_16_expr)


State 4

   74 ll_2_expr: T_LL_2 .

    $default  reduce using rule 74 (ll_2_expr)


State 5

   18 sz_expr: T_F_PRECISION .
   19        | T_F_PRECISION . T_ASSIGN T_EXP
   52 ll_10_expr: T_F_PRECISION . T_ASSIGN T_LL_10

    T_ASSIGN  shift, and go to state 76

    $default  reduce using rule 18 (sz_expr)


State 6

   75 ld_expr: T_LD_N .

    $default  reduce using rule 75 (ld_expr)


State 7

   76 ld_expr: T_LD_E .

    $default  reduce using rule 76 (ld_expr)


State 8

   78 ld_expr: T_PI .

    $default  reduce using rule 78 (ld_expr)


State 9

   79 ld_expr: T_EXP .

    $default  reduce using rule 79 (ld_expr)


State 10

   80 ld_expr: T_GAMMA .

    $default  reduce using rule 80 (ld_expr)


State 11

   81 ld_expr: T_PHI .

    $default  reduce using rule 81 (ld_expr)


State 12

   16 sz_expr: T_SZ .

    $default  reduce using rule 16 (sz_expr)


State 13

    3 calc_res: T_NEWLINE .

    $default  reduce using rule 3 (calc_res)


State 14

   17 sz_expr: T_CONFIG .

    $default  reduce using rule 17 (sz_expr)


State 15

    8 calc_res: T_QUIT . T_STOP
   14         | T_QUIT . T_NEWLINE

    T_NEWLINE  shift, and go to state 77
    T_STOP     shift, and go to state 78


State 16

    9 calc_res: T_EXIT . T_STOP
   15         | T_EXIT . T_NEWLINE

    T_NEWLINE  shift, and go to state 79
    T_STOP     shift, and go to state 80


State 17

    7 calc_res: T_HELP . T_STOP
   13         | T_HELP . T_NEWLINE

    T_NEWLINE  shift, and go to state 81
    T_STOP     shift, and go to state 82


State 18

   42 sz_expr: T_ECHO . T_L_BRACK sz_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 83


State 19

   20 sz_expr: T_A_UNIT .
   21        | T_A_UNIT . T_ASSIGN T_RAD
   22        | T_A_UNIT . T_ASSIGN T_DEG
   23        | T_A_UNIT . T_ASSIGN T_GRAD

    T_ASSIGN  shift, and go to state 84

    $default  reduce using rule 20 (sz_expr)


State 20

   27 sz_expr: T_I_FORMAT .
   28        | T_I_FORMAT . T_ASSIGN T_DEC
   29        | T_I_FORMAT . T_ASSIGN T_OCT
   30        | T_I_FORMAT . T_ASSIGN T_HEX
   31        | T_I_FORMAT . T_ASSIGN T_BIN

    T_ASSIGN  shift, and go to state 85

    $default  reduce using rule 27 (sz_expr)


State 21

   66 ll_10_expr: T_AND . T_L_BRACK ll_10_expr T_COMMA ll_10_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 86


State 22

   67 ll_10_expr: T_OR . T_L_BRACK ll_10_expr T_COMMA ll_10_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 87


State 23

   68 ll_10_expr: T_NOT . T_L_BRACK ll_10_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 88


State 24

   69 ll_10_expr: T_NAND . T_L_BRACK ll_10_expr T_COMMA ll_10_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 89


State 25

   70 ll_10_expr: T_NOR . T_L_BRACK ll_10_expr T_COMMA ll_10_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 90


State 26

   71 ll_10_expr: T_XOR . T_L_BRACK ll_10_expr T_COMMA ll_10_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 91


State 27

  142 ld_expr: T_RAND .

    $default  reduce using rule 142 (ld_expr)


State 28

   63 ll_10_expr: T_ABS . T_L_BRACK ll_10_expr T_R_BRACK
  141 ld_expr: T_ABS . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 92


State 29

   64 ll_10_expr: T_MOD . T_L_BRACK ll_10_expr T_COMMA ll_10_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 93


State 30

   65 ll_10_expr: T_MOD_2 . T_L_BRACK ll_10_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 94


State 31

  129 ld_expr: T_SQRT . T_L_BRACK ll_10_expr T_R_BRACK
  130        | T_SQRT . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 95


State 32

  131 ld_expr: T_LN . T_L_BRACK ll_10_expr T_R_BRACK
  132        | T_LN . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 96


State 33

  133 ld_expr: T_LG . T_L_BRACK ll_10_expr T_R_BRACK
  134        | T_LG . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 97


State 34

  135 ld_expr: T_LOG . T_L_BRACK ll_10_expr T_COMMA ll_10_expr T_R_BRACK
  136        | T_LOG . T_L_BRACK ld_expr T_COMMA ll_10_expr T_R_BRACK
  137        | T_LOG . T_L_BRACK ll_10_expr T_COMMA ld_expr T_R_BRACK
  138        | T_LOG . T_L_BRACK ld_expr T_COMMA ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 98


State 35

  139 ld_expr: T_RECIP . T_L_BRACK ll_10_expr T_R_BRACK
  140        | T_RECIP . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 99


State 36

  120 ld_expr: T_POWER . T_L_BRACK ld_expr T_COMMA ld_expr T_R_BRACK
  121        | T_POWER . T_L_BRACK ll_10_expr T_COMMA ll_10_expr T_R_BRACK
  122        | T_POWER . T_L_BRACK ld_expr T_COMMA ll_10_expr T_R_BRACK
  123        | T_POWER . T_L_BRACK ll_10_expr T_COMMA ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 100


State 37

   54 ll_10_expr: T_POWER_X_2 . T_L_BRACK ll_10_expr T_R_BRACK
  124 ld_expr: T_POWER_X_2 . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 101


State 38

  125 ld_expr: T_POWER_EXP_X . T_L_BRACK ld_expr T_R_BRACK
  126        | T_POWER_EXP_X . T_L_BRACK ll_10_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 102


State 39

   55 ll_10_expr: T_POWER_10_X . T_L_BRACK ll_10_expr T_R_BRACK
  127 ld_expr: T_POWER_10_X . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 103


State 40

   56 ll_10_expr: T_POWER_2_X . T_L_BRACK ll_10_expr T_R_BRACK
  128 ld_expr: T_POWER_2_X . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 104


State 41

   96 ld_expr: T_SIN . T_L_BRACK ll_10_expr T_R_BRACK
  102        | T_SIN . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 105


State 42

   97 ld_expr: T_COS . T_L_BRACK ll_10_expr T_R_BRACK
  103        | T_COS . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 106


State 43

   98 ld_expr: T_TAN . T_L_BRACK ll_10_expr T_R_BRACK
  104        | T_TAN . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 107


State 44

   99 ld_expr: T_ASIN . T_L_BRACK ll_10_expr T_R_BRACK
  105        | T_ASIN . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 108


State 45

  100 ld_expr: T_ACOS . T_L_BRACK ll_10_expr T_R_BRACK
  106        | T_ACOS . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 109


State 46

  101 ld_expr: T_ATAN . T_L_BRACK ll_10_expr T_R_BRACK
  107        | T_ATAN . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 110


State 47

   25 sz_expr: T_DEG .

    $default  reduce using rule 25 (sz_expr)


State 48

   26 sz_expr: T_GRAD .

    $default  reduce using rule 26 (sz_expr)


State 49

   24 sz_expr: T_RAD .

    $default  reduce using rule 24 (sz_expr)


State 50

  108 ld_expr: T_GRAD_RAD . T_L_BRACK ll_10_expr T_R_BRACK
  114        | T_GRAD_RAD . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 111


State 51

  109 ld_expr: T_RAD_GRAD . T_L_BRACK ll_10_expr T_R_BRACK
  115        | T_RAD_GRAD . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 112


State 52

  110 ld_expr: T_RAD_DEG . T_L_BRACK ll_10_expr T_R_BRACK
  116        | T_RAD_DEG . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 113


State 53

  111 ld_expr: T_DEG_RAD . T_L_BRACK ll_10_expr T_R_BRACK
  117        | T_DEG_RAD . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 114


State 54

  112 ld_expr: T_GRAD_DEG . T_L_BRACK ll_10_expr T_R_BRACK
  118        | T_GRAD_DEG . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 115


State 55

  113 ld_expr: T_DEG_GRAD . T_L_BRACK ll_10_expr T_R_BRACK
  119        | T_DEG_GRAD . T_L_BRACK ld_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 116


State 56

   36 sz_expr: T_DEC_OCT . T_L_BRACK ll_10_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 117


State 57

   37 sz_expr: T_DEC_HEX . T_L_BRACK ll_10_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 118


State 58

   38 sz_expr: T_DEC_BIN . T_L_BRACK ll_10_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 119


State 59

   39 sz_expr: T_OCT_DEC . T_L_BRACK ll_8_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 120


State 60

   40 sz_expr: T_HEX_DEC . T_L_BRACK ll_16_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 121


State 61

   41 sz_expr: T_BIN_DEC . T_L_BRACK ll_2_expr T_R_BRACK

    T_L_BRACK  shift, and go to state 122


State 62

   32 sz_expr: T_DEC .

    $default  reduce using rule 32 (sz_expr)


State 63

   33 sz_expr: T_OCT .

    $default  reduce using rule 33 (sz_expr)


State 64

   34 sz_expr: T_HEX .

    $default  reduce using rule 34 (sz_expr)


State 65

   35 sz_expr: T_BIN .

    $default  reduce using rule 35 (sz_expr)


State 66

   47 ll_10_expr: T_L_BRACK . ll_10_expr T_R_BRACK
   77 ld_expr: T_L_BRACK . ld_expr T_R_BRACK

    T_LL_10        shift, and go to state 1
    T_LL_8         shift, and go to state 2
    T_LL_16        shift, and go to state 3
    T_LL_2         shift, and go to state 4
    T_F_PRECISION  shift, and go to state 123
    T_LD_N         shift, and go to state 6
    T_LD_E         shift, and go to state 7
    T_PI           shift, and go to state 8
    T_EXP          shift, and go to state 9
    T_GAMMA        shift, and go to state 10
    T_PHI          shift, and go to state 11
    T_AND          shift, and go to state 21
    T_OR           shift, and go to state 22
    T_NOT          shift, and go to state 23
    T_NAND         shift, and go to state 24
    T_NOR          shift, and go to state 25
    T_XOR          shift, and go to state 26
    T_RAND         shift, and go to state 27
    T_ABS          shift, and go to state 28
    T_MOD          shift, and go to state 29
    T_MOD_2        shift, and go to state 30
    T_SQRT         shift, and go to state 31
    T_LN           shift, and go to state 32
    T_LG           shift, and go to state 33
    T_LOG          shift, and go to state 34
    T_RECIP        shift, and go to state 35
    T_POWER        shift, and go to state 36
    T_POWER_X_2    shift, and go to state 37
    T_POWER_EXP_X  shift, and go to state 38
    T_POWER_10_X   shift, and go to state 39
    T_POWER_2_X    shift, and go to state 40
    T_SIN          shift, and go to state 41
    T_COS          shift, and go to state 42
    T_TAN          shift, and go to state 43
    T_ASIN         shift, and go to state 44
    T_ACOS         shift, and go to state 45
    T_ATAN         shift, and go to state 46
    T_GRAD_RAD     shift, and go to state 50
    T_RAD_GRAD     shift, and go to state 51
    T_RAD_DEG      shift, and go to state 52
    T_DEG_RAD      shift, and go to state 53
    T_GRAD_DEG     shift, and go to state 54
    T_DEG_GRAD     shift, and go to state 55
    T_L_BRACK      shift, and go to state 66
    T_SUB          shift, and go to state 67

    ll_10_expr  go to state 124
    ll_8_expr   go to state 72
    ll_16_expr  go to state 73
    ll_2_expr   go to state 74
    ld_expr     go to state 125


State 67

   51 ll_10_expr: T_SUB . ll_10_expr
   95 ld_expr: T_SUB . ld_expr

    T_LL_10        shift, and go to state 1
    T_LL_8         shift, and go to state 2
    T_LL_16        shift, and go to state 3
    T_LL_2         shift, and go to state 4
    T_F_PRECISION  shift, and go to state 123
    T_LD_N         shift, and go to state 6
    T_LD_E         shift, and go to state 7
    T_PI           shift, and go to state 8
    T_EXP          shift, and go to state 9
    T_GAMMA        shift, and go to state 10
    T_PHI          shift, and go to state 11
    T_AND          shift, and go to state 21
    T_OR           shift, and go to state 22
    T_NOT          shift, and go to state 23
    T_NAND         shift, and go to state 24
    T_NOR          shift, and go to state 25
    T_XOR          shift, and go to state 26
    T_RAND         shift, and go to state 27
    T_ABS          shift, and go to state 28
    T_MOD          shift, and go to state 29
    T_MOD_2        shift, and go to state 30
    T_SQRT         shift, and go to state 31
    T_LN           shift, and go to state 32
    T_LG           shift, and go to state 33
    T_LOG          shift, and go to state 34
    T_RECIP        shift, and go to state 35
    T_POWER        shift, and go to state 36
    T_POWER_X_2    shift, and go to state 37
    T_POWER_EXP_X  shift, and go to state 38
    T_POWER_10_X   shift, and go to state 39
    T_POWER_2_X    shift, and go to state 40
    T_SIN          shift, and go to state 41
    T_COS          shift, and go to state 42
    T_TAN          shift, and go to state 43
    T_ASIN         shift, and go to state 44
    T_ACOS         shift, and go to state 45
    T_ATAN         shift, and go to state 46
    T_GRAD_RAD     shift, and go to state 50
    T_RAD_GRAD     shift, and go to state 51
    T_RAD_DEG      shift, and go to state 52
    T_DEG_RAD      shift, and go to state 53
    T_GRAD_DEG     shift, and go to state 54
    T_DEG_GRAD     shift, and go to state 55
    T_L_BRACK      shift, and go to state 66
    T_SUB          shift, and go to state 67

    ll_10_expr  go to state 126
    ll_8_expr   go to state 72
    ll_16_expr  go to state 73
    ll_2_expr   go to state 74
    ld_expr     go to state 127


State 68

    0 $accept: calc_run . $end

    $end  shift, and go to state 128


State 69

    1 calc_run: calc_res . calc_run
    2         | calc_res .
